0000008: [Design] Get skills aligned (Wusabinga)  0000005: [Bugs] Fix one Time only modal (Wusabinga)  0000020: [Design] Add Bug Tracker link (Wusabinga)  0000003: [Design] Get rid of Survey (Wusabinga)  0000004: [Design] add Dev-Labs link (Wusabinga)

--- a/style/sass/index.scss
+++ b/style/sass/index.scss
@@ -193,7 +193,7 @@
 	.features-item {
 		display: inline-block;
 		width: 33%;
-		text-align: left;
+		text-align: center;
 	}
 }
 
@@ -275,6 +275,5 @@
 
 	.features-item {
 		font-size: large;
-		text-align: left;
 	}
 }
